# mcp-secrets

./: .gitignore  EXTRA.md  README.md  TECHNICAL_WRITEUP.md
example_javascript/: README.md  design.md  package-lock.json  package.json  tsconfig.json
example_javascript/src/: fetcher.ts  index.ts  storage.ts  types.ts  ui-handler.ts
example_javascript/src/examples/: server.ts
example_python/: pyproject.toml  server.py  test_binary.py  test_client.py
example_python/mcp_secrets/: __init__.py  fetcher.py  storage.py  ui_handler.py
example_python/mcp_secrets/dialog_bin/: macos_dialog
secrets_dialog/: Cargo.toml  compile.sh  test_template.json
secrets_dialog/src/: main.rs
