[package]
name = "dialog_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dialog_gui"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.28"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
